fix(core): improve Execution.findChilds()
When computing output, findChilds is called for each taskrun so we go throught the ist of taskruns for each taskrun which is very time consuming.
Pre-computing a map of taskrun by ID improve things a lot.
I validated it using a CPU profile, before this change the findChilds() methods took up to 18% of CPU time on a contrieved example with a big EachParallel, with this change the new method is not prominent in the profile as it's very quick.