@@ -183,7 +183,7 @@ public class Execution implements DeletedInterface, TenantInterface {
 
     public List<TaskRun> findTaskRunsByTaskId(String id) {
         if (this.taskRunList == null) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
         return this.taskRunList
@@ -193,7 +193,7 @@ public class Execution implements DeletedInterface, TenantInterface {
     }
 
     public TaskRun findTaskRunByTaskRunId(String id) throws InternalException {
-        Optional<TaskRun> find = (this.taskRunList == null ? new ArrayList<TaskRun>() : this.taskRunList)
+        Optional<TaskRun> find = (this.taskRunList == null ? Collections.<TaskRun>emptyList() : this.taskRunList)
             .stream()
             .filter(taskRun -> taskRun.getId().equals(id))
             .findFirst();
@@ -206,9 +206,9 @@ public class Execution implements DeletedInterface, TenantInterface {
     }
 
     public TaskRun findTaskRunByTaskIdAndValue(String id, List<String> values) throws InternalException {
-        Optional<TaskRun> find = (this.taskRunList == null ? new ArrayList<TaskRun>() : this.taskRunList)
+        Optional<TaskRun> find = (this.taskRunList == null ? Collections.<TaskRun>emptyList() : this.taskRunList)
             .stream()
-            .filter(taskRun -> taskRun.getTaskId().equals(id) && findChildsValues(taskRun, true).equals(values))
+            .filter(taskRun -> taskRun.getTaskId().equals(id) && findParentsValues(taskRun, true).equals(values))
             .findFirst();
 
         if (find.isEmpty()) {
@@ -251,11 +251,10 @@ public class Execution implements DeletedInterface, TenantInterface {
         if (!errorsFlow.isEmpty() || this.hasFailed(resolvedTasks, parentTaskRun)) {
             // Check if among the failed task, they will be retried
             if (!this.hasFailedNoRetry(resolvedTasks, parentTaskRun)) {
-
-                return new ArrayList<>();
+                return Collections.emptyList();
             }
 
-            return resolvedErrors == null ? new ArrayList<>() : resolvedErrors;
+            return resolvedErrors == null ? Collections.emptyList() : resolvedErrors;
 
         }
 
@@ -281,7 +280,7 @@ public class Execution implements DeletedInterface, TenantInterface {
 
     public List<TaskRun> findTaskRunByTasks(List<ResolvedTask> resolvedTasks, TaskRun parentTaskRun) {
         if (resolvedTasks == null || this.taskRunList == null) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
         return this
@@ -558,7 +557,6 @@ public class Execution implements DeletedInterface, TenantInterface {
                     return null;
                 }
             })
-            .filter(Objects::nonNull)
             .orElseGet(() -> new FailedExecutionWithLog(
                     this.state.getCurrent() != State.Type.FAILED ? this.withState(State.Type.FAILED) : this,
                     RunContextLogger.logEntries(loggingEventFromException(e), LogEntry.of(this))
@@ -648,24 +646,29 @@ public class Execution implements DeletedInterface, TenantInterface {
             return ImmutableMap.of();
         }
 
-        Map<String, Object> result = new HashMap<>();
+        // we pre-compute the map of taskrun by id to avoid traversing the list of all taskrun for each taskrun
+        Map<String, TaskRun> byIds = this.taskRunList.stream().collect(Collectors.toMap(
+            taskRun -> taskRun.getId(),
+            taskRun -> taskRun
+        ));
 
+        Map<String, Object> result = new HashMap<>();
         for (TaskRun current : this.taskRunList) {
             if (current.getOutputs() != null) {
-                result = MapUtils.merge(result, outputs(current));
+                result = MapUtils.merge(result, outputs(current, byIds));
             }
         }
 
         return result;
     }
 
-    private Map<String, Object> outputs(TaskRun taskRun) {
-        List<TaskRun> childs = findChilds(taskRun)
+    private Map<String, Object> outputs(TaskRun taskRun, Map<String, TaskRun> byIds) {
+        List<TaskRun> parents = findParents(taskRun, byIds)
             .stream()
             .filter(r -> r.getValue() != null)
-            .collect(Collectors.toList());
+            .toList();
 
-        if (childs.size() == 0) {
+        if (parents.isEmpty()) {
             if (taskRun.getValue() == null) {
                 return Map.of(taskRun.getTaskId(), taskRun.getOutputs());
             } else {
@@ -673,15 +676,13 @@ public class Execution implements DeletedInterface, TenantInterface {
             }
         }
 
-        Map<String, Object> result = new HashMap<>();
+        Map<String, Object> result = MapUtils.newHashMap(1);
         Map<String, Object> current = result;
 
-        for (TaskRun t : childs) {
-            if (t.getValue() != null) {
-                HashMap<String, Object> item = new HashMap<>();
-                current.put(t.getValue(), item);
-                current = item;
-            }
+        for (TaskRun t : parents) {
+            HashMap<String, Object> item = MapUtils.newHashMap(1);
+            current.put(t.getValue(), item);
+            current = item;
         }
 
         if (taskRun.getOutputs() != null) {
@@ -699,10 +700,10 @@ public class Execution implements DeletedInterface, TenantInterface {
     public List<Map<String, Object>> parents(TaskRun taskRun) {
         List<Map<String, Object>> result = new ArrayList<>();
 
-        List<TaskRun> childs = findChilds(taskRun);
-        Collections.reverse(childs);
+        List<TaskRun> parents = findParents(taskRun);
+        Collections.reverse(parents);
 
-        for (TaskRun childTaskRun : childs) {
+        for (TaskRun childTaskRun : parents) {
             HashMap<String, Object> current = new HashMap<>();
 
             if (childTaskRun.getValue() != null) {
@@ -713,7 +714,7 @@ public class Execution implements DeletedInterface, TenantInterface {
                 current.put("outputs", childTaskRun.getOutputs());
             }
 
-            if (current.size() > 0) {
+            if (!current.isEmpty()) {
                 result.add(current);
             }
         }
@@ -722,22 +723,21 @@ public class Execution implements DeletedInterface, TenantInterface {
     }
 
     /**
-     * Find all children from this {@link TaskRun}. The list is starting from deeper child and end on closest child, so
-     * first element is the task that start first.
-     * This method don't return the current tasks
+     * Find all parents from this {@link TaskRun}.
+     * The list is starting from deeper parent and end on the closest parent,
+     * so the first element is the task that starts first.
+     * This method doesn't return the current tasks.
      *
      * @param taskRun current child
      * @return List of parent {@link TaskRun}
      */
-    public List<TaskRun> findChilds(TaskRun taskRun) {
+    public List<TaskRun> findParents(TaskRun taskRun) {
         if (taskRun.getParentTaskRunId() == null || this.taskRunList == null) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
         ArrayList<TaskRun> result = new ArrayList<>();
-
         boolean ended = false;
-
         while (!ended) {
             final TaskRun finalTaskRun = taskRun;
             Optional<TaskRun> find = this.taskRunList
@@ -758,10 +758,39 @@ public class Execution implements DeletedInterface, TenantInterface {
         return result;
     }
 
-    public List<String> findChildsValues(TaskRun taskRun, boolean withCurrent) {
+    /**
+     * Find all parents from this {@link TaskRun}.
+     * This method does the same as #findParents(TaskRun taskRun) but for performance reason, as it's called a lot,
+     * we pre-compute the map of taskrun by ID and use it here.
+     */
+    private List<TaskRun> findParents(TaskRun taskRun, Map<String, TaskRun> taskRunById) {
+        if (taskRun.getParentTaskRunId() == null || taskRunById.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        ArrayList<TaskRun> result = new ArrayList<>();
+        boolean ended = false;
+        while (!ended) {
+            final TaskRun finalTaskRun = taskRun;
+            TaskRun find = taskRunById.get(finalTaskRun.getParentTaskRunId());
+
+            if (find != null) {
+                result.add(find);
+                taskRun = find;
+            } else {
+                ended = true;
+            }
+        }
+
+        Collections.reverse(result);
+
+        return result;
+    }
+
+    public List<String> findParentsValues(TaskRun taskRun, boolean withCurrent) {
         return (withCurrent ?
-            Stream.concat(findChilds(taskRun).stream(), Stream.of(taskRun)) :
-            findChilds(taskRun).stream()
+            Stream.concat(findParents(taskRun).stream(), Stream.of(taskRun)) :
+            findParents(taskRun).stream()
         )
             .filter(t -> t.getValue() != null)
             .map(TaskRun::getValue)
